fixed overflow

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 html {
-  overflow-x: hidden;
+  overflow-x: inherit;
 }
 body {
   margin: 0;
@@ -10,7 +10,7 @@ body {
     "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  overflow-x: hidden;
+  overflow-x: inherit;
 }
 
 code {
